"anadiendo link de git repositorio"

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             Descripcion:
             Aplicación que encripta textos, así podrás intercambiar mensajes secretos con otras personas que sepan el
             secreto de la encriptación utilizada.
+            <span id='repository' onclick="window.location.href='https://github.com/SevenDogsNTwoCats/encriptador_sprint01'">Github repositorio</span>
         </p>
     </footer>
 
